@@ -8,21 +8,54 @@ import org.mockito.Mock;
 import org.mockito.junit.MockitoJUnitRunner;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import uk.gov.digital.ho.hocs.casework.api.dto.*;
-import uk.gov.digital.ho.hocs.casework.domain.model.*;
+import uk.gov.digital.ho.hocs.casework.api.dto.CaseDataType;
+import uk.gov.digital.ho.hocs.casework.api.dto.CaseSummaryLink;
+import uk.gov.digital.ho.hocs.casework.api.dto.CreateCaseRequest;
+import uk.gov.digital.ho.hocs.casework.api.dto.CreateCaseResponse;
+import uk.gov.digital.ho.hocs.casework.api.dto.GetCaseReferenceResponse;
+import uk.gov.digital.ho.hocs.casework.api.dto.GetCaseResponse;
+import uk.gov.digital.ho.hocs.casework.api.dto.GetCaseSummaryResponse;
+import uk.gov.digital.ho.hocs.casework.api.dto.GetCorrespondentResponse;
+import uk.gov.digital.ho.hocs.casework.api.dto.GetTopicResponse;
+import uk.gov.digital.ho.hocs.casework.api.dto.UpdateCaseDataRequest;
+import uk.gov.digital.ho.hocs.casework.api.dto.UpdateDeadlineForStagesRequest;
+import uk.gov.digital.ho.hocs.casework.api.dto.UpdatePrimaryCorrespondentRequest;
+import uk.gov.digital.ho.hocs.casework.api.dto.UpdateStageDeadlineRequest;
+import uk.gov.digital.ho.hocs.casework.api.dto.UpdateTeamByStageAndTextsRequest;
+import uk.gov.digital.ho.hocs.casework.api.dto.UpdateTeamByStageAndTextsResponse;
+import uk.gov.digital.ho.hocs.casework.api.utils.CaseDataTypeFactory;
+import uk.gov.digital.ho.hocs.casework.domain.model.Address;
+import uk.gov.digital.ho.hocs.casework.domain.model.CaseData;
+import uk.gov.digital.ho.hocs.casework.domain.model.CaseSummary;
+import uk.gov.digital.ho.hocs.casework.domain.model.Correspondent;
+import uk.gov.digital.ho.hocs.casework.domain.model.Topic;
 
 import java.time.LocalDate;
 import java.time.LocalDateTime;
-import java.util.*;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import java.util.UUID;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.mockito.Mockito.*;
+import static org.mockito.Mockito.doNothing;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.verifyNoMoreInteractions;
+import static org.mockito.Mockito.when;
 
 @RunWith(MockitoJUnitRunner.class)
 public class CaseDataResourceTest {
 
     private static final long caseID = 12345L;
-    private final CaseDataType caseDataType = new CaseDataType("MIN", "a1");
+    public static final String PREVIOUS_CASE_REFERENCE = "COMP/1234567/21";
+    public static final UUID PREVIOUS_CASE_UUID = UUID.randomUUID();
+    public static final UUID PREVIOUS_STAGE_UUID = UUID.randomUUID();
+    public static final UUID RANDOM_UUID = UUID.randomUUID();
+    public static final UUID FROM_CASE_UUID = UUID.randomUUID();
+    private final CaseDataType caseDataType = CaseDataTypeFactory.from("MIN", "a1");
     private final HashMap<String, String> data = new HashMap<>();
     private final UUID uuid = UUID.randomUUID();
     @Mock
@@ -42,14 +75,15 @@ public class CaseDataResourceTest {
     @Test
     public void shouldCreateCase() {
 
+        //given
         CaseData caseData = new CaseData(caseDataType, caseID, data, objectMapper, dateArg);
-        CreateCaseRequest request = new CreateCaseRequest(caseDataType.getDisplayCode(), data, dateArg);
+        CreateCaseRequest request = new CreateCaseRequest(caseDataType.getDisplayCode(), data, dateArg, FROM_CASE_UUID);
 
-        when(caseDataService.createCase(caseDataType.getDisplayCode(), data, dateArg)).thenReturn(caseData);
+        when(caseDataService.createCase(caseDataType.getDisplayCode(), data, dateArg, FROM_CASE_UUID)).thenReturn(caseData);
 
         ResponseEntity<CreateCaseResponse> response = caseDataResource.createCase(request);
 
-        verify(caseDataService, times(1)).createCase(caseDataType.getDisplayCode(), data, dateArg);
+        verify(caseDataService, times(1)).createCase(caseDataType.getDisplayCode(), data, dateArg, FROM_CASE_UUID);
 
         verifyNoMoreInteractions(caseDataService);
 
@@ -96,7 +130,7 @@ public class CaseDataResourceTest {
 
         doNothing().when(caseDataService).deleteCase(uuid, true);
 
-        ResponseEntity response = caseDataResource.deleteCase(uuid, true);
+        ResponseEntity<Void> response = caseDataResource.deleteCase(uuid, true);
 
         verify(caseDataService, times(1)).deleteCase(uuid, true);
 
@@ -109,15 +143,24 @@ public class CaseDataResourceTest {
     @Test
     public void shouldGetCaseSummary() {
 
-        when(caseDataService.getCaseSummary(uuid)).thenReturn(new CaseSummary("type", null, null, null, null, null, null, null, Collections.emptyMap()));
+        when(caseDataService.getCaseSummary(uuid)).thenReturn(new CaseSummary(null, null, null, null, null, null, null, PREVIOUS_CASE_REFERENCE, PREVIOUS_CASE_UUID, PREVIOUS_STAGE_UUID));
 
-        ResponseEntity response = caseDataResource.getCaseSummary(uuid);
+        ResponseEntity<GetCaseSummaryResponse> response = caseDataResource.getCaseSummary(uuid);
 
         verify(caseDataService, times(1)).getCaseSummary(uuid);
 
         verifyNoMoreInteractions(caseDataService);
 
         assertThat(response).isNotNull();
+        assertThat(response.getBody()).isNotNull();
+
+        // check the fields are returned
+        GetCaseSummaryResponse body = response.getBody();
+        assertThat(body.getPreviousCase()).isNotNull();
+        CaseSummaryLink link = body.getPreviousCase();
+        assertThat(link.getCaseReference()).isEqualTo(PREVIOUS_CASE_REFERENCE);
+        assertThat(link.getCaseUUID()).isEqualTo(PREVIOUS_CASE_UUID);
+        assertThat(link.getStageUUID()).isEqualTo(PREVIOUS_STAGE_UUID);
         assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
     }
 
@@ -138,21 +181,24 @@ public class CaseDataResourceTest {
 
         ResponseEntity<GetCaseResponse> response = caseDataResource.getCase(uuid, Optional.of(Boolean.TRUE));
 
+        assertThat(response).isNotNull();
         verify(caseDataService, times(1)).getCase(uuid);
 
         verifyNoMoreInteractions(caseDataService);
 
         assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
+
+        assertThat(response.getBody()).isNotNull();
         assertThat(response.getBody().getPrimaryCorrespondent()).isInstanceOf(GetCorrespondentResponse.class);
         assertThat(response.getBody().getPrimaryTopic()).isInstanceOf(GetTopicResponse.class);
     }
 
     @Test
     public void shouldCalculateTotals() {
-        Map<String, String> totals = new HashMap();
+        Map<String, String> totals = new HashMap<>();
         when(caseDataService.calculateTotals(uuid, uuid, "list")).thenReturn(totals);
 
-        ResponseEntity response = caseDataResource.calculateTotals(uuid, uuid, "list");
+        ResponseEntity<Map<String, String>> response = caseDataResource.calculateTotals(uuid, uuid, "list");
 
         verify(caseDataService, times(1)).calculateTotals(uuid, uuid, "list");
         verifyNoMoreInteractions(caseDataService);
@@ -168,7 +214,7 @@ public class CaseDataResourceTest {
 
         doNothing().when(caseDataService).updateCaseData(uuid, uuid, data);
 
-        ResponseEntity response = caseDataResource.updateCaseData(uuid, uuid, updateCaseDataRequest);
+        ResponseEntity<Void> response = caseDataResource.updateCaseData(uuid, uuid, updateCaseDataRequest);
 
         verify(caseDataService, times(1)).updateCaseData(uuid, uuid, data);
         verifyNoMoreInteractions(caseDataService);
@@ -184,7 +230,7 @@ public class CaseDataResourceTest {
         doNothing().when(caseDataService).updateDateReceived(uuid, uuid, dateArg, 0);
 
         // when
-        ResponseEntity response = caseDataResource.updateCaseDateReceived(uuid, uuid, dateArg);
+        ResponseEntity<Void> response = caseDataResource.updateCaseDateReceived(uuid, uuid, dateArg);
 
         // then
         verify(caseDataService, times(1)).updateDateReceived(uuid, uuid, dateArg, 0);
@@ -200,7 +246,7 @@ public class CaseDataResourceTest {
         doNothing().when(caseDataService).updateDispatchDeadlineDate(uuid, uuid, dateArg);
 
         // when
-        ResponseEntity response = caseDataResource.updateCaseDispatchDeadlineDate(uuid, uuid, dateArg);
+        ResponseEntity<Void> response = caseDataResource.updateCaseDispatchDeadlineDate(uuid, uuid, dateArg);
 
         // then
         verify(caseDataService, times(1)).updateDispatchDeadlineDate(uuid, uuid, dateArg);
@@ -214,7 +260,7 @@ public class CaseDataResourceTest {
         UpdateStageDeadlineRequest updateStageDeadlineRequest = new UpdateStageDeadlineRequest("TEST", 7);
         doNothing().when(caseDataService).updateStageDeadline(uuid, uuid, "TEST", 7);
 
-        ResponseEntity response = caseDataResource.updateStageDeadline(uuid, uuid, updateStageDeadlineRequest);
+        ResponseEntity<Void> response = caseDataResource.updateStageDeadline(uuid, uuid, updateStageDeadlineRequest);
 
         verify(caseDataService).updateStageDeadline(uuid, uuid, "TEST", 7);
         verifyNoMoreInteractions(caseDataService);
@@ -227,10 +273,10 @@ public class CaseDataResourceTest {
         String[] texts = {"Text1"};
         UpdateTeamByStageAndTextsRequest request = new UpdateTeamByStageAndTextsRequest(
                 uuid, uuid, "stageType", "teamUUIDKey", "teamNameKey", texts);
-        Map<String, String> teamMap = new HashMap();
+        Map<String, String> teamMap = new HashMap<>();
         when(caseDataService.updateTeamByStageAndTexts(uuid, uuid, "stageType", "teamUUIDKey", "teamNameKey", texts)).thenReturn(teamMap);
 
-        ResponseEntity response = caseDataResource.updateTeamByStageAndTexts(uuid, uuid, request);
+        ResponseEntity<UpdateTeamByStageAndTextsResponse> response = caseDataResource.updateTeamByStageAndTexts(uuid, uuid, request);
 
         verify(caseDataService).updateTeamByStageAndTexts(uuid, uuid, "stageType", "teamUUIDKey", "teamNameKey", texts);
         verifyNoMoreInteractions(caseDataService);
@@ -238,13 +284,13 @@ public class CaseDataResourceTest {
         assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
         assertThat(response.getBody()).isNotNull();
         assertThat(response.getBody()).isInstanceOf(UpdateTeamByStageAndTextsResponse.class);
-        assertThat(((UpdateTeamByStageAndTextsResponse) response.getBody()).getTeamMap()).isEqualTo(teamMap);
+        assertThat(response.getBody().getTeamMap()).isEqualTo(teamMap);
     }
 
     @Test
     public void shouldGetDocumentTags(){
         UUID caseUUID = UUID.randomUUID();
-        List<String> documentTags = new ArrayList<String>(Arrays.asList("Tag"));
+        List<String> documentTags = List.of("Tag");
         when(caseDataService.getDocumentTags(caseUUID)).thenReturn(documentTags);
 
         ResponseEntity<List<String>> response = caseDataResource.getDocumentTags(caseUUID);
@@ -256,7 +302,7 @@ public class CaseDataResourceTest {
 
     @Test
     public void shouldEvictFromTheCache() {
-        ResponseEntity responseEntity = caseDataResource.clearCachedTemplateForCaseType(caseDataType.getDisplayName());
+        ResponseEntity<String> responseEntity = caseDataResource.clearCachedTemplateForCaseType(caseDataType.getDisplayName());
 
         assertThat(responseEntity.getBody()).isEqualTo("Cache Cleared");
         assertThat(responseEntity.getStatusCode()).isEqualTo(HttpStatus.OK);
@@ -283,11 +329,11 @@ public class CaseDataResourceTest {
     public void updateCaseDataValue() {
         String variableName = "TestVariableName";
 
-        ResponseEntity<String> results = caseDataResource.updateCaseDataValue(uuid, variableName, "TestValue");
+        ResponseEntity<Void> results = caseDataResource.updateCaseDataValue(uuid, variableName, "TestValue");
 
         assertThat(results).isNotNull();
         assertThat(results.getStatusCodeValue()).isEqualTo(200);
-        
+
         verify(caseDataService).updateCaseData(uuid, null, Map.of(variableName, "TestValue"));
         verifyNoMoreInteractions(caseDataService);
     }
@@ -300,7 +346,7 @@ public class CaseDataResourceTest {
         UpdatePrimaryCorrespondentRequest primaryCorrespondentUUID =
                 new UpdatePrimaryCorrespondentRequest(primaryCorrespondentRequestUUID);
 
-        ResponseEntity results = caseDataResource.updatePrimaryCorrespondent(
+        ResponseEntity<Void> results = caseDataResource.updatePrimaryCorrespondent(
                 caseUUID,
                 stageUUID,
                 primaryCorrespondentUUID
@@ -320,7 +366,7 @@ public class CaseDataResourceTest {
                 new UpdateDeadlineForStagesRequest(stageTypeAndDaysMap);
 
 
-        ResponseEntity response = caseDataResource.updateDeadlineForStages(uuid, uuid, updateDeadlineForStagesRequest);
+        ResponseEntity<Void> response = caseDataResource.updateDeadlineForStages(uuid, uuid, updateDeadlineForStagesRequest);
 
         verify(caseDataService).updateDeadlineForStages(uuid, uuid, stageTypeAndDaysMap);
         verifyNoMoreInteractions(caseDataService);
